# FaceDetection_Yunet

./: CMakeLists.txt  README.md  Video.cpp  face_detection_yunet1.cpp
